# GcodeEditor

./: .gitignore  CMakeLists.txt  GCodeEditor.pro  GCodeEditor.pro.user.4a06c63  GCodeEditor.pro.user.4b71cfd  GCodeEditor.pro.user.68a18bc  README.md  captureparams.cpp  captureparams.h  captureparams.ui  config.json  gcodeanalyzator.cpp  gcodeanalyzator.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: captureparams.h  captureparams.ui  gcodeanalyzator.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
